--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "styled-theming": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://gosia-ras.github.io/personal-homepage/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
