--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "Homepage",
   "name": "Personal Homepage",
   "icons": [],
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
