--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-normalize": "^0.4.4",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-switch": "^6.0.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0",
@@ -26,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeploy" : "npm run build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
