--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^0.26.0",
     "color-alpha": "^1.1.3",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-normalize": "^0.4.4",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
